airflow/logs/dag_id=nightly_pipeline/run_id=scheduled__2026-05-22T000000+0000/task_id=load_new_matches_from_rds/attempt=1.log
[2026-05-23T03:45:25.676+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: nightly_pipeline.load_new_matches_from_rds scheduled__2026-05-22T00:00:00+00:00 [queued]>
[2026-05-23T03:45:25.715+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: nightly_pipeline.load_new_matches_from_rds scheduled__2026-05-22T00:00:00+00:00 [queued]>
[2026-05-23T03:45:25.717+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 3
[2026-05-23T03:45:25.787+0000] {taskinstance.py:2192} INFO - Executing <Task(PythonOperator): load_new_matches_from_rds> on 2026-05-22 00:00:00+00:00
[2026-05-23T03:45:25.813+0000] {standard_task_runner.py:60} INFO - Started process 177 to run task
[2026-05-23T03:45:25.828+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'nightly_pipeline', 'load_new_matches_from_rds', 'scheduled__2026-05-22T00:00:00+00:00', '--job-id', '195', '--raw', '--subdir', 'DAGS_FOLDER/nightlypipeline.py', '--cfg-path', '/tmp/tmps653i3or']
[2026-05-23T03:45:25.839+0000] {standard_task_runner.py:88} INFO - Job 195: Subtask load_new_matches_from_rds
[2026-05-23T03:45:26.234+0000] {task_command.py:423} INFO - Running <TaskInstance: nightly_pipeline.load_new_matches_from_rds scheduled__2026-05-22T00:00:00+00:00 [running]> on host 74e8a7aa2252
[2026-05-23T03:45:26.638+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='you' AIRFLOW_CTX_DAG_ID='nightly_pipeline' AIRFLOW_CTX_TASK_ID='load_new_matches_from_rds' AIRFLOW_CTX_EXECUTION_DATE='2026-05-22T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2026-05-22T00:00:00+00:00'
[2026-05-23T03:45:31.300+0000] {nightlypipeline.py:132} INFO - 📌 Creating watermark_pipeline table...
[2026-05-23T03:45:32.140+0000] {nightlypipeline.py:146} INFO - 📅 Last successful run: 2020-01-01 00:00:00
[2026-05-23T03:45:32.351+0000] {nightlypipeline.py:156} INFO - 📌 Creating new_matches table...
[2026-05-23T03:45:32.365+0000] {nightlypipeline.py:226} ERROR - ❌ Error in load_new_matches_from_rds: syntax error at or near ","
LINE 7:                         winner_id UUID ),
                                                ^
Traceback (most recent call last):
  File "/opt/airflow/dags/nightlypipeline.py", line 157, in load_new_matches_from_rds
    tgt_cur.execute("""
psycopg2.errors.SyntaxError: syntax error at or near ","
LINE 7:                         winner_id UUID ),
                                                ^

[2026-05-23T03:45:32.392+0000] {python.py:201} INFO - Done. Returned value was: 0
[2026-05-23T03:45:32.524+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=nightly_pipeline, task_id=load_new_matches_from_rds, execution_date=20260522T000000, start_date=20260523T034525, end_date=20260523T034532
[2026-05-23T03:45:32.616+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2026-05-23T03:45:32.725+0000] {taskinstance.py:3281} INFO - 1 downstream tasks scheduled from follow-on schedule check
